Fix boostrap positioning issue on ios 7.0.x
Taken from https://github.com/twbs/bootstrap/issues/9023#issuecomment-45570888

--- a/app/assets/stylesheets/service.css.scss
+++ b/app/assets/stylesheets/service.css.scss
@@ -17,6 +17,11 @@ html{
   text-align: center;
 }
 
+.modal-ios {
+  position: absolute;
+  overflow: visible
+}
+
 $nprogress-color: #21A0F5;
 $nprogress-height: 3px;
 
